--- a/Views/Login.css
+++ b/Views/Login.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #1E1E1E;
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", "Helvetica Neue", "Arial", sans-serif;
 }
 
 .container {
